fixed button styles on mobile

--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -198,7 +198,6 @@ $transition: all .1s linear
 
 	form
 		input[type='email']
-
 			-webkit-appearance: none
 			@include border-radius(4px)
 			border: 2px solid $green
@@ -219,8 +218,9 @@ $transition: all .1s linear
 			display: inline-block
 
 			input[type='submit']
+				-webkit-appearance: none
 				background-color: $green
-				border-radius: 4px
+				@include border-radius(4px)
 				border: 2px solid $green
 				color: $whitesmoke
 				font-family: $secondary-font-stack
